--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Flavia Assumpcao</h1>
-      <img src="/images/Fla profile photo.jpeg" class="img-circle" width ="150px" height = "150px" alt="profile picture">
+      <img src="images/photo.jpeg" class="img-circle" width ="150px" height = "150px" alt="profile picture">
       <p>I'm a passionated Environmental Professional specialised in contaminated sites and pollution. I'm on the process of becoming a Developer to stay connected to the environmental fields but from a different angle.</p>
 
       <a href="https://www.linkedin.com/in/flavia-assumpcao-8b504740" class="linkedin_link">- my profile -</a>
